# algo-trading-platform

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  SETUP.md  docker-compose.yml  pyproject.toml  run.py  run_api.py
.github/: dependabot.yml
.github/workflows/: ci.yml
data/: sample_nifty.csv
docs/: Algo_Trading_Platform_Architecture.docx  Algo_Trading_Platform_Architecture_v1.1.docx  README.md  UX_Design_and_Implementation.md  ~$go_Trading_Platform_Architecture.docx  ~$go_Trading_Platform_Architecture_v1.1.docx
docs/ux/: 01-dashboard.html  02-strategy-builder.html  03-deploy-dialog.html  04-options-simulator.html  index.html  theme.css
frontend/: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  AppShell.tsx  index.css  types.ts  vite-env.d.ts
frontend/src/api/: backtest.test.ts  backtest.ts  broker.ts  config.test.ts  config.ts  http.ts  live.ts  oms.ts  paper.ts  risk.ts  services.test.ts  strategy.ts
frontend/src/components/: DeployDialog.test.tsx  DeployDialog.tsx  EquityChart.tsx  MetricsCards.test.tsx  MetricsCards.tsx  PriceChart.tsx
frontend/src/hooks/: useFetch.ts
frontend/src/pages/: BacktestPage.test.tsx  BacktestPage.tsx  BrokersPage.test.tsx  BrokersPage.tsx  DashboardPage.test.tsx  DashboardPage.tsx  LivePage.test.tsx  LivePage.tsx  OrdersPage.test.tsx  OrdersPage.tsx  PaperPage.test.tsx  PaperPage.tsx  Placeholder.tsx  RiskPage.test.tsx  RiskPage.tsx  StrategiesPage.test.tsx  StrategiesPage.tsx  pages.tsx
infra/terraform/: README.md  main.tf  providers.tf  variables.tf
libs/common/: __init__.py  broker.py  feed.py  market.py  models.py  strategy.py
services/backtest-service/: README.md  run_backtest.py
services/backtest-service/backtest_engine/: __init__.py  analytics.py  broker_sim.py  config.py  data_feed.py  engine.py  main.py  portfolio.py
services/backtest-service/tests/: test_analytics.py  test_costs.py  test_engine.py  test_strategy.py
services/broker-gateway/: README.md  requirements.txt
services/broker-gateway/broker_gateway/: __init__.py  adapters.py  base.py  config.py  gateway.py  kite_adapter.py  main.py
services/broker-gateway/tests/: test_adapters.py  test_broker_list_api.py  test_gateway.py  test_gateway_api.py  test_kite_adapter.py
services/health-service/: Dockerfile  README.md  requirements.txt
services/health-service/app/: config.py  main.py
services/health-service/tests/: test_health.py
services/live-engine/: README.md  requirements.txt
services/live-engine/live_engine/: __init__.py  engine.py  main.py
services/live-engine/tests/: test_live_api.py  test_live_engine.py
services/oms/: README.md
services/paper-trade/: README.md
services/risk-engine/: README.md
services/strategy-service/: README.md
services/tradingview-webhook/: README.md
strategies/: README.md  __init__.py  ma_crossover.py
tests/: README.md
(+33 files in other folders)
