[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algo-trading-platform"
version = "0.1.0"
description = "End-to-end algorithmic trading platform (Phase 0 foundation)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx>=0.27",          # FastAPI TestClient transport
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "radon>=6.0",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "pre-commit>=3.7",
]

[tool.setuptools]
packages = ["libs"]

# ---------------------------------------------------------------------------
# Ruff: lint + format + import sorting + complexity (mccabe)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["services", "libs", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C90", "S", "SIM", "RUF"]
# UP042/UP017 are 3.11+ upgrade-only hints; the (str, Enum) + timezone.utc forms
# are valid on the 3.12 target and kept for portability. S101 (assert) is fine in
# tests; handled per-file below.
ignore = ["UP042", "UP017"]
[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101", "S105", "S106", "S107"]

# ---------------------------------------------------------------------------
# mypy: static typing
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
mypy_path = "libs"
# Type-check source, not tests. (Two services each have a tests/ package, which
# would otherwise collide under the same module name.)
exclude = "(^|/)tests/"

# ---------------------------------------------------------------------------
# pytest + coverage gate
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["services", "libs", "tests"]
pythonpath = ["services/health-service", "services/backtest-service", "services/risk-engine", "services/oms", "services/paper-trade", "services/tradingview-webhook", "."]
addopts = "-ra -q --import-mode=importlib"

[tool.coverage.run]
branch = true
source = ["services", "libs", "strategies"]
omit = ["**/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 85           # global gate; risk/OMS packages raise this later

# ---------------------------------------------------------------------------
# Bandit: security (SAST)
# ---------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["tests", ".venv"]
